--- a/formulario.html
+++ b/formulario.html
@@ -10,21 +10,21 @@
 
 <body>
     <div>
-        <h1 id="title">Formulário desenvolvedor</h1>
-        <p id="subtitle">Preencha as informações</p>
+        <h1 id="title">Application form</h1>
+        <p id="subtitle">Fill in the information:</p>
         <br>
     </div>
 
     <form>
         <fieldset class="group">
             <div class="field">
-                <label for="nome"><strong>Nome</strong></label>
-                <input type="text" name="nome" id="nome" required>
+                <label for="name"><strong>Name</strong></label>
+                <input type="text" name="name" id="name" required>
             </div>
 
             <div class="field">
-                <label for="sobrenome"><strong>Sobrenome</strong></label>
-                <input type="text" name="sobrenome" id="sobrenome" required>
+                <label for="lastname"><strong>Last name</strong></label>
+                <input type="text" name="lastname" id="lastname" required>
             </div>
         </fieldset>
 
@@ -34,7 +34,7 @@
         </div>
 
         <div class="field">
-            <label><strong>De qual lado da aplicação você desenvolve?</strong></label>
+            <label><strong>What kind of developer are you?</strong></label>
             <label>
                 <input type="radio" name="devweb" value="frontend" checked>Front-end
             </label>
@@ -47,9 +47,9 @@
         </div>
 
         <div class="field">
-            <label for="senioridade"><strong>Senioridade</strong></label>
+            <label for="senioridade"><strong>How do you define yourself?</strong></label>
             <select id="senioridade">
-                <option selected disabled value="">selecione</option>
+                <option selected disabled value="">select</option>
                 <option>Junior</option>
                 <option>Pleno</option>
                 <option>Senior</option>
@@ -58,33 +58,33 @@
 
         <fieldset class="group">
             <div id="check">
-                <label><strong>Selecione as tecnologias que tem familiaridade</strong></label>
+                <label><strong>Select technologies are familiar:</strong></label>
                 <br> <br>
-                <input type="checkbox" name="tecnologia1" id="tecnologia1" value="HTML">
-                <label for="tecnologia1"> HTML</label>
-                <input type="checkbox" name="tecnologia2" id="tecnologia2" value="CSS">
-                <label for="tecnologia2"> CSS</label>
-                <input type="checkbox" name="tecnologia3" id="tecnologia3" value="JavaScript">
-                <label for="tecnologia3"> JavaScript</label>
-                <input type="checkbox" name="tecnologia4" id="tecnologia4" value="PHP">
-                <label for="tecnologia4"> PHP</label>
-                <input type="checkbox" name="tecnologia5" id="tecnologia5" value="C#">
-                <label for="tecnologia5"> C#</label>
-                <input type="checkbox" name="tecnologia6" id="tecnologia6" value="Python">
-                <label for="tecnologia6"> Python</label>
-                <input type="checkbox" name="tecnologia7" id="tecnologia7" value="Java">
-                <label for="tecnologia7"> Java</label>
+                <input type="checkbox" name="tecnology1" id="tecnology1" value="HTML">
+                <label for="tecnology1"> HTML</label>
+                <input type="checkbox" name="tecnology2" id="tecnology2" value="CSS">
+                <label for="tecnology2"> CSS</label>
+                <input type="checkbox" name="tecnology3" id="tecnology3" value="JavaScript">
+                <label for="tecnology3"> JavaScript</label>
+                <input type="checkbox" name="tecnology4" id="tecnology4" value="PHP">
+                <label for="tecnology4"> PHP</label>
+                <input type="checkbox" name="tecnology5" id="tecnology5" value="C#">
+                <label for="tecnology5"> C#</label>
+                <input type="checkbox" name="tecnology6" id="tecnology6" value="Python">
+                <label for="tecnology6"> Python</label>
+                <input type="checkbox" name="tecnology7" id="tecnology7" value="Java">
+                <label for="tecnology7"> Java</label>
             </div>
         </fieldset>
 
         <div class="field">
             <br>
-            <label><strong>Conte um pouco sobre a sua experiencia com tecnologia</strong></label>
-            <textarea row="6" style="width: 26em" name="experiencia" id="experiencia"> </textarea>
+            <label><strong>Tell us a little about your experience with technology</strong></label>
+            <textarea row="6" style="width: 26em" name="experience" id="experience"> </textarea>
         </div>
 
         <br>
-        <button class="button" type="submit">Enviar Formulário</button>
+        <button class="button" type="submit">Submit</button>
     </form>
 
 </body>
